# cjepa

./: .gitignore  augment.py  blocks.py  build_trt_engine.sh  check_leakage.py  config.py  dataset.py  dataset_dynamic_maze.py  dataset_maze.py  dataset_nlp.py  dataset_reasoning.py  dataset_robomimic.py  dataset_sudoku.py  eval.py  eval_rollout_robomimic.py  export_onnx.py  extract_pdf.py  infer.py  infer_robomimic.py  inference_actions.py  inference_dynamic_maze.py  inference_maze.py  inference_nlp.py  inference_reasoning.py  inference_reasoning_hard.py  inspect_logs.py  loss.py  main.py  model.py  optim.py  paper.txt  paranoid_inference.py  run_deterministic_demo.py  sanity_check_overfit.py  train.py  train_robomimic.py  trt_infer.cpp  vision.py
tensorrt/: CMakeLists.txt  export_onnx.py  export_test_data.py  trt_infer.cpp
utils/: dist.py  logging.py
